--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORTA = 3169
+PORTA = 5007
 
-HOST = localhost
-USER = root
-PASS = 1234
-DB = api_tcc
+MYSQL_HOST = localhost
+MYSQL_USER = admin
+MYSQL_PASS = @dm!n
+MYSQL_DB = api_tcc
 
-URI=mysql://root:1234@localhost:3306/api_tcc
+TOKEN_JWT = ===!!silk==
