--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORTA = 5007
 
 MYSQL_HOST = localhost
-MYSQL_USER = admin
-MYSQL_PASS = @dm!n
+MYSQL_USER = root
+MYSQL_PASS = 1234
 MYSQL_DB = api_tcc
 
 TOKEN_JWT = ===!!silk==
